# actix-server-backend

./: .env  Cargo.toml
migrations/2023-01-14-004422_create_food_menu/: down.sql  up.sql
migrations/2023-01-14-105217_create_food_variants_menu/: down.sql  up.sql
migrations/2023-01-15-125859_create_useers/: up.sql
sites/login/: index.html
sites/snake/: index.html
sites/snake/assets/: index.d227a7d0.css
src/: configs.rs  extensions.rs  graphql_resolvers.rs  graphql_types.rs  jwt_claims.rs  lib.rs  main.rs  models.rs  param_types.rs  responders.rs  rules.rs  schema.rs  tests.rs
