[package]
name = "actix-server-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = { version = "4.2.1", features = ["cookies"] }
actix-web-lab = "0.18.9"
argon2 = { version = "0.4.1", features = ["std"] }
async-graphql = "5.0.5"
async-graphql-actix-web = "5.0.5"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "uuid"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
dotenv = "0.15.0"
jsonwebtoken = "8.2.0"
send_wrapper = "0.6.0"
serde = "1.0.152"
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
